--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
-    "html-webpack-plugin": "^5.5.0",
-    "webpack-cli": "^4.9.2"
+    "html-webpack-plugin": "^5.5.0"
   }
 }
