--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv-webpack": "^7.1.0",
     "path-posix": "^1.0.0",
     "style-loader": "^3.3.1",
+    "svg-inline-loader": "^0.8.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
