--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
     "dotenv-webpack": "^7.1.0",
+    "file-loader": "^6.2.0",
     "path-posix": "^1.0.0",
     "style-loader": "^3.3.1",
     "svg-inline-loader": "^0.8.2",
